<resources>
    <string name="app_name">Projects Manager</string>
    <string name="projects">Projects</string>
    <string name="studies">Studies</string>
    <string name="register_a_project">Register a project</string>
    <string name="proj_long_click_message">Are you sure you want to change the project?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="proj_del_message">Are you sure you want to delete this project?</string>
    <string name="register_study">Register study</string>
    <string name="stu_long_click_message">Are you sure you want to change the study?</string>
    <string name="stu_del_message">Are you sure you want to delete this study?</string>
    <string name="study_title">Study title</string>
    <string name="project_name">Project Name</string>
    <string name="project_abstract">Project abstract</string>
    <string name="project_state">Project State</string>
    <string name="name">Name</string>
    <string name="abstract_">Abstract</string>
    <string name="description">Description</string>
    <string name="funcionalities">Funcionalities</string>
    <string name="functionality">Functionality</string>
    <string name="idea">Idea</string>
    <string name="doing">Doing</string>
    <string name="done">Done</string>
    <string name="requirements">Requirements</string>
    <string name="no_requirements">No requirements</string>
    <string name="add_requirement">Add Requirement</string>
    <string name="choose_study">Choose Study</string>
    <string name="or">or</string>
    <string name="requirement">Requirement</string>
    <string name="add">Add</string>
    <string name="add_proj_error">Fill the three first fields</string>
    <string name="from">From</string>
    <string name="link">Link</string>
    <string name="modules">Modules</string>
    <string name="add_module">Add Module</string>
    <string name="no_modules">No modules</string>
    <string name="title">Title</string>
    <string name="fill_stu_name">Fill Study name</string>
    <string name="simply_realized">Simply realized</string>
    <string name="simply_done">Simply done</string>
    <string name="no_funcionalities">No funcionalities</string>
    <string name="study_name">Study Name</string>
    <string name="n_a">n/a</string>
</resources>
