<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btnChooseStudyARD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/choose_study" />

    <Button
        android:id="@+id/btnAddReqARD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtReqARD"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="13dp"
        android:background="@android:color/transparent"
        android:text="@string/add"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btnCancelARD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtReqARD"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:layout_toStartOf="@+id/btnAddReqARD"
        android:background="@android:color/transparent"
        android:text="@android:string/cancel" />

    <EditText
        android:id="@+id/edtReqARD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/requirement"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textNoSuggestions"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnChooseStudyARD"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:textColor="@android:color/black"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/add_requirement"
        android:textColor="@android:color/black"
        android:textSize="8pt"
        android:textStyle="bold" />
</RelativeLayout>