<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="13dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/projListState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/projListName"
            app:srcCompat="@drawable/idea"
            android:contentDescription="@string/project_state"/>

        <TextView
            android:id="@+id/projListName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/project_name"
            android:textColor="@android:color/black"
            android:textSize="8.5pt" />
    </RelativeLayout>

    <TextView
        android:id="@+id/projListAbstract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_abstract" />
</LinearLayout>