<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActAddStu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackAddStu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableStart="?attr/homeAsUpIndicator"
            android:text="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0"
            android:text="" />

        <Button
            android:id="@+id/btnAddAddStu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableEnd="@android:drawable/ic_menu_add"
            android:text="" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/edtNameAddStu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textNoSuggestions"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/edtFromAddStu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textNoSuggestions"
                android:hint="@string/from"
                android:importantForAutofill="no"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/edtLinkAddStu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textNoSuggestions"
                android:hint="@string/link"
                android:importantForAutofill="no"
                android:singleLine="true"/>

            <LinearLayout
                android:id="@+id/modAddStu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_border"
                android:padding="13dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modules"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:textColor="@android:color/black"
                        android:textSize="8pt"/>

                    <ImageButton
                        android:id="@+id/btnAddModAddStu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_input_add"
                        android:contentDescription="@string/add_module"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@android:color/transparent"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/noModAddStu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_modules" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cbSDoneAddStu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/simply_done"
                android:textSize="17sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>