<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btnAddModAMD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtTitleAMD"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="13dp"
        android:background="@android:color/transparent"
        android:text="@string/add"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btnCancelAMD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtTitleAMD"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:layout_toStartOf="@+id/btnAddModAMD"
        android:background="@android:color/transparent"
        android:text="@android:string/cancel" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/add_module"
        android:textColor="@android:color/black"
        android:textSize="8pt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtTitleAMD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textNoSuggestions"
        android:textAlignment="center" />
</RelativeLayout>