<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActAddProj">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackAddProj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableStart="?attr/homeAsUpIndicator"
            android:text="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:alpha="0"/>

        <Button
            android:id="@+id/btnAddAddProj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableEnd="@android:drawable/ic_menu_add"
            android:text="" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/edtNameAddProj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions|textPersonName"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtAbstAddProj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/abstract_"
                android:importantForAutofill="no"
                android:inputType="text|textNoSuggestions|textMultiLine"
                android:maxLines="2" />

            <EditText
                android:id="@+id/edtDescAddProj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="text|textNoSuggestions|textMultiLine"
                android:maxLines="3" />

            <LinearLayout
                android:id="@+id/funcAddProj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_border"
                android:orientation="vertical"
                android:padding="13dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/funcionalities"
                    android:textColor="@android:color/black"
                    android:textSize="8pt" />

                <EditText
                    android:id="@+id/func-0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/functionality"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:singleLine="true" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radState"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="13dp"
                android:checkedButton="@id/radState1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radState1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/add_proj_leftbutton_background"
                    android:button="@android:color/transparent"
                    android:paddingStart="8dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="10dp"
                    android:text="@string/idea"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/radState2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-3dp"
                    android:layout_marginEnd="-3dp"
                    android:layout_weight="1"
                    android:background="@drawable/add_proj_middlebutton_background"
                    android:button="@android:color/transparent"
                    android:paddingStart="8dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="10dp"
                    android:text="@string/doing"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/radState3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/add_proj_rightbutton_background"
                    android:button="@android:color/transparent"
                    android:paddingStart="8dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="10dp"
                    android:text="@string/done"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/reqAddProj"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="13dp"
                android:background="@drawable/rounded_border"
                android:orientation="vertical"
                android:padding="13dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/requirements"
                        android:textColor="@android:color/black"
                        android:textSize="8pt"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"/>

                    <ImageButton
                        android:id="@+id/btnAddReqAddProj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_input_add"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/add_requirement" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="7pt"/>

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_delete"
                        android:background="@android:color/transparent"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/textView5"
                        android:layout_marginStart="3dp"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/noReqAddProj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_requirements" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>