<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ActShowProj">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackShowProj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableStart="?attr/homeAsUpIndicator"
            android:text="" />

        <Button
            android:id="@+id/btnDelShowProj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableEnd="@android:drawable/ic_menu_delete"
            android:text="" />

        <Button
            android:id="@+id/btnEditShowProj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableEnd="@android:drawable/ic_menu_edit"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvNameShowProj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"/>

        <ImageView
            android:id="@+id/imgStateShowProj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/idea" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abstract_"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvAbstShowProj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abstract_"
                android:textColor="@android:color/secondary_text_light"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold|italic"/>

            <TextView
                android:id="@+id/tvDescShowProj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/description"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/funcionalities"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold|italic"/>

            <LinearLayout
                android:id="@+id/funcShowProj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/noFuncShowProj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_funcionalities"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/requirements"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold|italic"/>

            <LinearLayout
                android:id="@+id/reqShowProj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/noReqShowProj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_requirements"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>